unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/JCSoftware__pc_PowerCloneRule__c.object-meta.xml
<CustomObject>
    <description>Table name that is being cloned with instructions on which fields have specific criteria when getting cloned (ie, add suffix, prefix, integer)</description>
    <label>PowerClone Rule</label>
    <nameField>
        <label>PowerClone Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PowerClone Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>