unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/fields/JCSoftware__Behavior_Value__c.field-meta.xml
<CustomField>
    <fullName>JCSoftware__Behavior_Value__c</fullName>
    <defaultValue>"Default Value"</defaultValue>
    <description>Default value of the behavior</description>
    <inlineHelpText>Default Value of the Behavior.  Use #BLANK to have an empty default value when the object is cloned.</inlineHelpText>
    <label>Behavior Value</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>