unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/fields/JCSoftware__Date_Increment__c.field-meta.xml
<CustomField>
    <fullName>JCSoftware__Date_Increment__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Used as a base date for the increment by date rule.</description>
    <label>Date Increment</label>
    <type>Date</type>
</CustomField>