unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/fields/JCSoftware__Date_Increment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>JCSoftware__Date_Increment_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Increment Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>