unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/fields/JCSoftware__FieldName__c.field-meta.xml
<CustomField>
    <fullName>JCSoftware__FieldName__c</fullName>
    <description>Field in Cloned Table</description>
    <label>Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>