unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/fields/JCSoftware__Table_Field_Key__c.field-meta.xml
<CustomField>
    <fullName>JCSoftware__Table_Field_Key__c</fullName>
    <description>Used to verify only one rule can exist for a Table / Field combination</description>
    <inlineHelpText>Used to verify only one rule can exist for a Table / Field combination</inlineHelpText>
    <label>Table Field Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>