unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/fields/JCSoftware__TableName__c.field-meta.xml
<CustomField>
    <fullName>JCSoftware__TableName__c</fullName>
    <label>Table Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>