unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/fields/JCSoftware__Use_Record_Date__c.field-meta.xml
<CustomField>
    <fullName>JCSoftware__Use_Record_Date__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Record Date</label>
    <type>Checkbox</type>
</CustomField>