unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/validationRules/JCSoftware__Behavior_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>JCSoftware__Behavior_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>JCSoftware__Behavior_Value__c &lt;&gt; "true" &amp;&amp; 
JCSoftware__Behavior_Value__c &lt;&gt; "false"  &amp;&amp;
JCSoftware__Behavior_Rule__c  = "Default_Value_Checkbox"</errorConditionFormula>
    <errorDisplayField>JCSoftware__Behavior_Value__c</errorDisplayField>
    <errorMessage>Default behavior value must be "true" or "false" when selecting the "Default_Value_Checkbox" behavior.</errorMessage>
</ValidationRule>