unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/validationRules/JCSoftware__Integer_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>JCSoftware__Integer_Validation</fullName>
    <active>true</active>
    <description>The "Integer_Suffix" default value has to be a number.</description>
    <errorConditionFormula>JCSoftware__Behavior_Rule__c  = "Integer_Suffix" &amp;&amp;
ISNUMBER(JCSoftware__Behavior_Value__c) = FALSE</errorConditionFormula>
    <errorDisplayField>JCSoftware__Behavior_Value__c</errorDisplayField>
    <errorMessage>The default value for the "Integer_Suffix" behavior must be an integer.</errorMessage>
</ValidationRule>