unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/validationRules/JCSoftware__Text_Integer_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>JCSoftware__Text_Integer_Format</fullName>
    <active>true</active>
    <description>Check for</description>
    <errorConditionFormula>JCSoftware__Behavior_Rule__c == 'Text_Suffix_Integer_Suffix' &amp;&amp;
     OR
     (
         CONTAINS( JCSoftware__Behavior_Value__c , '_' ) == false,
         FIND('_', JCSoftware__Behavior_Value__c) == 1,
         ISNUMBER
         (
              RIGHT(
                                JCSoftware__Behavior_Value__c,
                                (LEN(JCSoftware__Behavior_Value__c)) - FIND('_', JCSoftware__Behavior_Value__c) 
                           )
           )  == false
     )</errorConditionFormula>
    <errorDisplayField>JCSoftware__Behavior_Value__c</errorDisplayField>
    <errorMessage>Format Error.  Behavior Format should be TEXT_INTEGER</errorMessage>
</ValidationRule>