unpackaged/main/default/objects/JCSoftware__pc_PowerCloneRule__c/listViews/JCSoftware__Rules.listView-meta.xml
<ListView>
    <fullName>JCSoftware__Rules</fullName>
    <columns>NAME</columns>
    <columns>JCSoftware__TableName__c</columns>
    <columns>JCSoftware__FieldName__c</columns>
    <columns>JCSoftware__Behavior_Rule__c</columns>
    <columns>JCSoftware__Behavior_Value__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Rules</label>
</ListView>